Fix table cell text alignment for RTL tables

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,4 +20,8 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+
+  table[dir="rtl"] td {
+    text-align: right;
+  }
 }
